Refactor index.html with content updates and styling
Updated the HTML structure and content, including style adjustments and additional sections for improvement points, member introductions, research life, events, achievements, and career paths.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
         <html>
         <head>
             <meta charset="UTF-8">
-            <title>&#x30e1;&#x30f3;&#x30d0;&#x30fc;&#x7d39;&#x4ecb;</title>
+            <title>&#x6539;&#x5584;&#x70b9;</title>
             <style>
 /* From extension vscode.github */
 /*---------------------------------------------------------------------------------------------
@@ -138,7 +138,34 @@
         
         </head>
         <body class="vscode-body vscode-light">
-            <h1 id="メンバー紹介">メンバー紹介</h1>
+            <p>次回納品、11月末
+12月中旬ロードショー</p>
+<h1 id="改善点">改善点</h1>
+<ul>
+<li>最初を[zhang sogabe lab]に変える</li>
+<li>文字の可読性を上げる
+<ul>
+<li>先生の名前</li>
+<li>就職先</li>
+<li>研究実績</li>
+</ul>
+</li>
+<li>国内と国外の学会発表のコーナーを入れる</li>
+<li>受賞歴を紹介</li>
+<li><s>先生3人の色味を揃える</s></li>
+<li>2025 ver.←半角あける</li>
+<li><s>ポケモンはレベル順に登場させれば？</s></li>
+<li>夏合宿、若手の会、中間発表も大きく扱ってほしい</li>
+<li>夏合宿→夏合宿（院試お疲れさま会）</li>
+<li>就職先、、メーカーも加えてほしい
+<ul>
+<li>アイシン</li>
+<li>デンソー</li>
+<li>トヨタ</li>
+</ul>
+</li>
+</ul>
+<h1 id="メンバー紹介">メンバー紹介</h1>
 <ul>
 <li>張先生
 <ul>
